# vita

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  crontab  fly.toml  pyproject.toml  start.sh
.github/: copilot-instructions.md
api/: urls.py
api/views/: tasks.py
assistant/: constants.py  consumers.py  context_processors.py  prompt.py  routing.py  session.py  system_prompt.txt  system_prompt_voice.txt  tasks.py  tests.py  urls.py  views.py
assistant/services/: __init__.py  chat_service.py
assistant/templatetags/: assistant_formatting.py
assistant/tools/: __init__.py  base.py  registry.py
core/: api.py  constants.py  middleware.py  models.py  services.py  sse.py  urls.py  views.py  voice.py
core/migrations/: 0001_initial.py
health/: models.py
health/migrations/: 0001_initial.py  0002_remove_exercise_health_exer_slug_f87cb3_idx_and_more.py
journal/: admin.py  models.py
journal/migrations/: 0001_initial.py  0002_dreamentry.py
notifications/: emails.py  models.py  phone.py  services.py  tasks.py  tests.py  urls.py  views.py
notifications/migrations/: 0001_initial.py  0002_lastapplicationinteraction.py
social/: admin.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
social/fixtures/: contacts_faker.json
social/migrations/: 0001_initial.py  0002_contact_priority.py  0003_contact_check_in_frequency_days_and_more.py  0004_contacttouchpoint_sentiment.py  0005_group.py  0006_rename_name_contact_first_name_contact_last_name_and_more.py  0007_contact_strength_alter_contacttouchpoint_contact_and_more.py  0008_remove_contacttouchpoint_sentiment.py  0009_contact_is_ever_contacted.py  0010_BackfillEverContacted.py  0011_backfill_contact_touchpoints.py
static/: manifest.json
static/css/: styles.css
static/js/: assistant-chat.js  confetti.js  geolocation.js  navigation.js  sse.js  sw.js  toasts.js  voice.js
tasks/: admin.py  assistant_tools.py  forms.py  models.py  services.py  tasks.py  tests.py  urls.py  views.py  voice.py
tasks/management/: __init__.py
tasks/migrations/: 0002_routine_routinestep.py  0003_alter_routine_days_of_week.py  0004_routine_tags_routinestep_default_energy_and_more.py  (+18 more)
templates/: base.html  navbar.html
vita/: asgi.py  settings.py  urls.py
(+60 files in other folders)
