[project]
name = "vita"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=6.0",
    "django-bootstrap5>=25.3",
    "django-browser-reload>=1.21.0",
    "django-htmx>=1.27.0",
    "django-tasks>=0.10.0",
    "djlint>=1.36.4",
    "elevenlabs>=2.27.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "whitenoise[brotli]>=6.11.0",
]

[tool.djlint]
profile="django"

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]
