[project]
name = "vita"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0",
    "django-bootstrap5>=25.3",
    "django-browser-reload>=1.21.0",
    "django-htmx>=1.27.0",
    "django-tasks>=0.10.0",
    "djlint>=1.36.4",
    "elevenlabs>=2.27.0",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.2.1",
    "whitenoise[brotli]>=6.11.0",
    "pywebpush>=1.14.0",
    "django-extensions>=4.1",
    "mjml>=0.11.1",
    "django-eventstream>=5.3.3",
    "daphne>=4.2.1",
    "faker>=37.0.0",
    "openai>=2.6.1",
]

[tool.djlint]
profile="django"

[dependency-groups]
dev = [
    "notebook==6.5.4",
    "traitlets==5.9.0",
    "ipython==8.10.0",
    "ruff>=0.14.8",
    "setuptools>=80.9.0",
    "faker>=40.1.2",
]
