[project]
name = "vita"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0",
    "django-bootstrap5>=25.3",
    "django-htmx>=1.27.0",
    "django-tasks>=0.10.0",
    "elevenlabs>=2.27.0",
    "python-dotenv>=1.2.1",
    "whitenoise[brotli]>=6.11.0",
    "pywebpush>=1.14.0",
    "django-extensions>=4.1",
    "mjml>=0.11.1",
    "django-eventstream>=5.3.3",
    "daphne>=4.2.1",
    "openai>=2.6.1",
    "markdown>=3.10",
    "bleach>=6.3.0",
    "twilio>=9.10.2",
    "channels[daphne,types]>=4.3.2",
]

[tool.djlint]
profile="django"

[dependency-groups]
dev = [
    "ruff>=0.14.8",
    "djlint>=1.36.4",
    "django-browser-reload>=1.21.0",
    "faker>=40.1.2",
]
